--- a/springex/src/main/resources/application.properties
+++ b/springex/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=7518
 # = DATA SOURCE
 # ===============================
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/live
+spring.datasource.url = jdbc:mysql://localhost:3306/demo5
 spring.datasource.username = root
 spring.datasource.password = root
 # ===============================
@@ -16,6 +16,8 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.format_sql=true;
+
+spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
